--- a/server/package.json
+++ b/server/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "node index.js"
+    "start": "node index.js",
+    "test": "node test.js"
   },
   "author": "Ghaith Al Seirawan",
   "license": "ISC",
@@ -13,6 +14,7 @@
     "dotenv": "^16.0.3",
     "fastify": "^4.14.1",
     "fs": "^0.0.1-security",
-    "openai": "^3.2.1"
+    "openai": "^3.2.1",
+    "stream": "^0.0.2"
   }
 }
